--- a/src/contents/posts/usingMdx.mdx
+++ b/src/contents/posts/usingMdx.mdx
@@ -1,10 +1,10 @@
 ---
-title: "Yukina MDX 组件测试"  
-description: "测试从 Frosti 移植过来的 MDX 组件功能"  
-published: 2024-01-15 
-cover: "https://picbed.xiaozhangya.xin/picbed/20250726183800973.png"  
-category: "Examples"  
-tags: ["MDX", "组件", "测试"]  
+title: MDX
+published: 2022-08-01
+description: This post demonstrates how to include embedded video in a blog post.
+tags: [Example, Video]
+category: Examples
+draft: false
 ---
   
 import Collapse from "../../components/mdx/Collapse.astro";  
